Cleaning project bar

--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -618,7 +618,7 @@ ca:
       all_conversations: Les meves converses
       conversations: Converses
       task_lists: Tasques
-      all_task_lists: Les meves llistes de tasques
+      all_task_lists: Les meves tasques
       project_settings: Projecte
       all_pages: Les meves pàgines
       people: Persones
