--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -619,7 +619,7 @@ de:
       all_conversations: Alle Konversationen
       conversations: Konversationen
       task_lists: Aufgabenlisten
-      all_task_lists: Alle Aufgabenlisten
+      all_task_lists: Alle Aufgaben
       project_settings: Projekt Einstellungen
       all_pages: Alle Seiten
       people: Personen
