--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -617,7 +617,7 @@ en:
       all_conversations: All Conversations
       conversations: Conversations
       task_lists: Task Lists
-      all_task_lists: All Task Lists
+      all_task_lists: All Tasks
       project_settings: Project Settings
       all_pages: All Pages
       people: People
