--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -617,7 +617,7 @@ es:
       all_conversations: Mis conversaciones
       conversations: Conversaciones
       task_lists: Tareas
-      all_task_lists: Mis listas de tareas
+      all_task_lists: Todas las tareas
       project_settings: Proyecto
       all_pages: Mis páginas
       people: Personas
