--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -618,7 +618,7 @@ fr:
       all_conversations: Mes conversations
       conversations: Conversations
       task_lists: Tâches
-      all_task_lists: Mes listes de tâches
+      all_task_lists: Tous les tâches
       project_settings: Paramètres du projet
       all_pages: Mes pages
       people: Personnes
