--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -619,7 +619,7 @@ it:
       all_conversations: Tutte le conversazioni
       conversations: Conversazioni
       task_lists: Compiti
-      all_task_lists: Tutte le liste di compiti
+      all_task_lists: Tutte i compiti
       project_settings: Progetto
       all_pages: Tutte le pagine
       people: Persone
