Can now see users invited to a project (localization needed)

--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -154,6 +154,7 @@ ca:
       profile: Perfil
       projects: Projectes
       recent_activity_for: "Activitat recent de {{user_name}}"
+      pending_invite: "{{name}} currently has a pending invitation to one of your projects. You will not be able to access any more information until this invitation has been accepted."
     user:
       formatted_address: "{{street}}, {{city}} ({{country}})"
       remove_from_project: Esborrar del projecte
