--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -153,6 +153,7 @@ es:
       profile: Perfil
       projects: Proyectos
       recent_activity_for: "Actividad reciente de {{user_name}}"
+      pending_invite: "{{name}} currently has a pending invitation to one of your projects. You will not be able to access any more information until this invitation has been accepted."
     user:
       formatted_address: "{{street}}, {{city}} ({{country}})"
       remove_from_project: Borrar del proyecto
