--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -154,6 +154,7 @@ de:
       profile: Profil
       projects: Projekte
       recent_activity_for: "Kürzliche Aktivitäten für {{user_name}}"
+      pending_invite: "{{name}} currently has a pending invitation to one of your projects. You will not be able to access any more information until this invitation has been accepted."
     user:
       formatted_address: "{{street}}, {{city}} ({{country}})"
       remove_from_project: Aus dem Projekt entfernen
