--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -154,6 +154,7 @@ fr:
       profile: Profil
       projects: Projets
       recent_activity_for: "Activité récente de {{user_name}}"
+      pending_invite: "{{name}} currently has a pending invitation to one of your projects. You will not be able to access any more information until this invitation has been accepted."
     user:
       formatted_address: "{{street}}, {{city}} ({{country}})"
       remove_from_project: Éliminer du projet
