Empty comments no longer allowed

--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -973,6 +973,13 @@ ca:
         odd: "ha de ser senar"
         even: "ha de ser parell"
         record_invalid: "La validació ha fallat: {{errors}}"
+      ####
+      models:
+        comment:
+          attributes:
+            body:
+              no_body_generic: "Please write about what you have done in the box above."
+              no_body_task: "Please write about what you have done for this task in the box above."
 
   date:
     yesterday: Ahir
