--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -979,6 +979,13 @@ de:
         odd: "muss ungerade sein"
         even: "muss gerade sein"
         record_invalid: "Überprüfung fehlgeschlagen: {{errors}}"
+      ####
+      models:
+        comment:
+          attributes:
+            body:
+              no_body_generic: "Please write about what you have done in the box above."
+              no_body_task: "Please write about what you have done for this task in the box above."
 
   date:
     yesterday: Gestern
