--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -974,6 +974,13 @@ es:
         odd: "debe ser impar"
         even: "debe ser par"
         record_invalid: "La validación falló: {{errors}}"
+      ####
+      models:
+        comment:
+          attributes:
+            body:
+              no_body_generic: "Please write about what you have done in the box above."
+              no_body_task: "Please write about what you have done for this task in the box above."
 
   date:
     yesterday: Ayer
