Improve error handling on conversations

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -985,6 +985,12 @@ es:
             body:
               no_body_generic: "Please write about what you have done in the box above."
               no_body_task: "Please write about what you have done for this task in the box above."
+        conversation:
+          attributes:
+            body:
+              no_body_generic: "Please write a comment to start the conversation."
+            name:
+              no_title: "Please give this conversation a title"
 
   date:
     yesterday: Ayer
