--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -975,12 +975,19 @@ en:
         odd: "must be odd"
         even: "must be even"
         record_invalid: "Validation failed: {{errors}}"
+      ####
       models:
         comment:
           attributes:
             body:
               no_body_generic: "Please write about what you have done in the box above."
               no_body_task: "Please write about what you have done for this task in the box above."
+        conversation:
+          attributes:
+            body:
+              no_body_generic: "Please write a comment to start the conversation."
+            name:
+              no_title: "Please give this conversation a title."
 
   date:
     yesterday: Yesterday
