--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -989,6 +989,12 @@ fr:
             body:
               no_body_generic: "Please write about what you have done in the box above."
               no_body_task: "Please write about what you have done for this task in the box above."
+        conversation:
+          attributes:
+            body:
+              no_body_generic: "Please write a comment to start the conversation."
+            name:
+              no_title: "Please give this conversation a title"
 
   date:
     yesterday: Hier
