--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -199,6 +199,46 @@ ca:
       tasks_without_a_due_date: "Sense data"
       you_receive_this_message: "Pots deshabilitar aquest recordatori a la teva {{link}}"
       settings_page: "pàgina d'usuari"
+  ####
+  groups:
+    index:
+      title: Groups
+      groups_in: "Groups you are in"
+      your_group: "Your group"
+      no_groups: "You do not belong to any groups."
+      description: "Use groups to share resources with others, and to band together projects under a single name!"
+      submit_project: Add
+      remove_project: Remove
+    primer:
+      no_group_create: "You do not own a group. {{link}}."
+      create_group: "Create a group"
+    header:
+      leave: Leave
+      remove: Remove
+    logo_fields:
+      current: Current logo
+      delete: Remove
+      description: This logo will appear on all projects belonging to this group
+      upload: Upload
+    search:
+      username_or_email: Username or email
+      invite: Invite
+      invite_people: Invite people to the group
+    fields:
+      name: Name
+      description: Description
+      permalink: Permalink
+      permalink_description: Domain your group can be accessed from
+    new:
+      submit: Create
+      explain: You can only have one group.
+      title: Create group
+      created: Your group has been created
+    edit:
+      submit: Update
+    show:
+      edit: Edit
+      add_project: Add a project
   projects:
     index:
       title: Activitat en tots els teus projectes
@@ -286,11 +326,19 @@ ca:
       resend: Reenviar l'email d'invitació
       pending: "S'ha enviat un email en aquest usuari, pero encara no ho ha confirmat"
       discard: Descartar invitació
+    ####
+    group_invitation:
+      invited_user: "{{inviter}} invited <b>{{invitee}}</b> to join the group."
+      invited_email: "{{inviter}} invited <b>{{email}}</b> to join the group."
     sent:
       email_sent: "<b>Hem enviat un email avisant l'usuari que accepti la teva invitació</b>. Si no poden trobar l'email, assegurat que no s´ha classificat com a spam. Si el problema persisteix, ens escrius un email."
     pending:
       to_access_or: per accedir al projecte o
+      ####
+      to_access_or_group: to access the group or
       invited_to_join: "{{by}} t´ha convidat a unir-te al projecte {{project}}."
+      ####
+      invited_to_join_group: "{{by}} has invited you to join the group {{group}}."
     resend:
       resent: "Hem reenviat la invitació a {{recipient}}. Si no poden trobar l'email, assegurat de que no s´ha classificat com a spam."
       return: Tornar enrere
@@ -639,6 +687,8 @@ ca:
       signup: Crear compte
       files: Arxius
       invitations: Invitacions
+      ####
+      groups: Project Groups
     global_navigation:
       project_invitations: Invitacions
       home: Home
@@ -699,6 +749,9 @@ ca:
       teambox_is_a_pm_platform: "Teambox és una plataforma de gestió de projectes pensada per al món real."
       plan_share_and_collaborate: "Planifica, comparteix i estigues al dia del que s'ha fet. Tan fàcil com hauria de ser."
       report_abuse: "Aquest email t'ha arribat per petició del teu amic. Si hi hagut un intent d'abús, contacta'ns."
+    ####
+    invitation_group:
+      you_have_been_invited_to: "You have been invited to the group <b>{{group}}</b>"
     confirm:
       hey: "Hola, {{user_name}}!"
       follow_the_link: "Per a <b>completar el teu registre</b> a Teambox només has de seguir aquest enllaç:"
