--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -199,6 +199,46 @@ de:
       tasks_without_a_due_date: "Tasks without a due date"
       you_receive_this_message: "You receive this message because you signed up for it. You can disable it on your {{link}}"
       settings_page: "settings page"
+  ####
+  groups:
+    index:
+      title: Groups
+      groups_in: "Groups you are in"
+      your_group: "Your group"
+      no_groups: "You do not belong to any groups."
+      description: "Use groups to share resources with others, and to band together projects under a single name!"
+      submit_project: Add
+      remove_project: Remove
+    primer:
+      no_group_create: "You do not own a group. {{link}}."
+      create_group: "Create a group"
+    header:
+      leave: Leave
+      remove: Remove
+    logo_fields:
+      current: Current logo
+      delete: Remove
+      description: This logo will appear on all projects belonging to this group
+      upload: Upload
+    search:
+      username_or_email: Username or email
+      invite: Invite
+      invite_people: Invite people to the group
+    fields:
+      name: Name
+      description: Description
+      permalink: Permalink
+      permalink_description: Domain your group can be accessed from
+    new:
+      submit: Create
+      explain: You can only have one group.
+      title: Create group
+      created: Your group has been created
+    edit:
+      submit: Update
+    show:
+      edit: Edit
+      add_project: Add a project
   projects:
     index:
       title: "Nachrichten Feeds für alle eigenen Projekte"
@@ -286,11 +326,19 @@ de:
       resend: Einladungs-Email noch einmal versenden
       pending: "Eine Email wurde an den Benutzer versendet, aber sie wurde noch nicht bestätigt."
       discard: Einladung verwerfen
+    ####
+    group_invitation:
+      invited_user: "{{inviter}} invited <b>{{invitee}}</b> to join the group."
+      invited_email: "{{inviter}} invited <b>{{email}}</b> to join the group."
     sent:
       email_sent: "<b>Wir haben diesem Benutzer gerade eine Benachrichtigungs-Email gesendet mit einem Link, um die Einladung anzunehmen</b>. Wenn sie die Email nicht erhalten haben, stellen Sie sicher, dass sie nicht als Spam eingestuft wurde oder wählen Sie eine andere Email Adresse. Wenn weiterhin Probleme bestehen, nehmen Sie bitte Kontakt zu unserem Team auf."
     pending:
       to_access_or: um das Projekt aufzurufen oder
+      ####
+      to_access_or_group: to access the group or
       invited_to_join: "{{by}} hat Sie eingeladen an dem Projekt {{project}} teilzunehmen."
+      ####
+      invited_to_join_group: "{{by}} has invited you to join the group {{group}}."
     resend:
       resent: "Die Einladung wurde erneut versendet an {{recipient}}. Wenn die Email nicht erhalten wurde, kontrollieren Sie bitte den Spam-Ordner."
       return: "Zurück"
@@ -640,6 +688,8 @@ de:
       signup: Registrieren
       files: Dateien
       invitations: Einladungen
+      ####
+      groups: Project Groups
     global_navigation:
       project_invitations: Projekt Einladungen
       home: Home
@@ -704,6 +754,9 @@ de:
       teambox_is_a_pm_platform: "Teambox ist eine Projekt Management Plattform, die für die Echtzeit Zusammenarbeit entwickelt wurde."
       plan_share_and_collaborate: "Planen Sie, Geben Sie frei and erfassen Sie was gemacht werden soll. So einfach, wie es sein soll."
       report_abuse: "Diese Email wurde versendet auf den Wunsch einer Ihrer Kontakte. Teilen Sie uns bitte jeglichen Missbrauch mit."
+    ####
+    invitation_group:
+      you_have_been_invited_to: "You have been invited to the group <b>{{group}}</b>"
     confirm:
       hey: "Hallo {{user_name}}!"
       follow_the_link: "Um die <b>Anmeldung für Teambox zu vervollständigen</b>, melden Sie sich an per Klick hierhin: "
