--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -198,6 +198,46 @@ it:
       tasks_without_a_due_date: "Compiti senza scadenza"
       you_receive_this_message: "You receive this message because you signed up for it. You can disable it on your {{link}}"
       settings_page: "settings page"
+  ####
+  groups:
+    index:
+      title: Groups
+      groups_in: "Groups you are in"
+      your_group: "Your group"
+      no_groups: "You do not belong to any groups."
+      description: "Use groups to share resources with others, and to band together projects under a single name!"
+      submit_project: Add
+      remove_project: Remove
+    primer:
+      no_group_create: "You do not own a group. {{link}}."
+      create_group: "Create a group"
+    header:
+      leave: Leave
+      remove: Remove
+    logo_fields:
+      current: Current logo
+      delete: Remove
+      description: This logo will appear on all projects belonging to this group
+      upload: Upload
+    search:
+      username_or_email: Username or email
+      invite: Invite
+      invite_people: Invite people to the group
+    fields:
+      name: Name
+      description: Description
+      permalink: Permalink
+      permalink_description: Domain your group can be accessed from
+    new:
+      submit: Create
+      explain: You can only have one group.
+      title: Create group
+      created: Your group has been created
+    edit:
+      submit: Update
+    show:
+      edit: Edit
+      add_project: Add a project
   projects:
     index:
       title: Attività in tutti i tuoi progetti
@@ -285,11 +325,19 @@ it:
       resend: Reinvia la mail d'invito
       pending: "E' stata inviata una mail a questo utente, però non ha ancora confermato"
       discard: Rifiuta l'invito
+    ####
+    group_invitation:
+      invited_user: "{{inviter}} invited <b>{{invitee}}</b> to join the group."
+      invited_email: "{{inviter}} invited <b>{{email}}</b> to join the group."
     sent:
       email_sent: "<b>Abbiamo inviato una mail avvisando l'utente di accettare il tuo invito</b>. Se non riesce a trovare la mail, assicurati che non sia stata classificata come spam. Se il problema persiste, scrivici una mail."
     pending:
       to_access_or: per accedere al progetto o
+      ####
+      to_access_or_group: to access the group or
       invited_to_join: "{{by}} ti ha invitato a unirti al progetto {{project}}."
+      ####
+      invited_to_join_group: "{{by}} has invited you to join the group {{group}}."
     resend:
       resent: "Abbiamo rimandato l'invito a {{recipient}}. Se non riesce a trovare la mail, assicurati che non sia stata classificata come spam."
       return: Indietro
@@ -639,6 +687,8 @@ it:
       signup: Creare un account
       files: Files
       invitations: Inviti
+      ####
+      groups: Project Groups
     global_navigation:
       project_invitations: Inviti
       home: Home
@@ -699,6 +749,9 @@ it:
       teambox_is_a_pm_platform: "Teambox è una piattaforma di gestione dei progetti pensata per il mondo reale."
       plan_share_and_collaborate: "Pianifica, condividi e tieniti aggiornato su quel che è stato fatto. Facile come dovrebbe essere."
       report_abuse: "Questa email ti è stata inviata su richiesta di un tuo contatto. Se c'è stato un intento di abuso, contattaci."
+    ####
+    invitation_group:
+      you_have_been_invited_to: "You have been invited to the group <b>{{group}}</b>"
     confirm:
       hey: "Ciao, {{user_name}}!"
       follow_the_link: "Per <b>completare la tua registrazione</b> in Teambox segui questo link:"
