Ru translation for JS time formatters: I18n.t for time.formats.short (12h or 24h)

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1075,7 +1075,7 @@ de:
   time:
     formats:
       default: "%a, %d %b %Y %H:%M:%S %z"
-      short: "%d %b %H:%M"
+      short: "%I:%M %p"
       long: "%B %d, %Y %H:%M"
     am: "am"
     pm: "pm"
