--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1059,7 +1059,7 @@ en:
   time:
     formats:
       default: "%a, %d %b %Y %H:%M:%S %z"
-      short: "%d %b %H:%M"
+      short: "%I:%M %p"
       long: "%B %d, %Y %H:%M"
     am: "am"
     pm: "pm"
