--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1070,7 +1070,7 @@ es:
   time:
     formats:
       default: "%a, %d %b %Y %H:%M:%S %z"
-      short: "%d %b %H:%M"
+      short: "%I:%M %p"
       long: "%B %d, %Y %H:%M"
     am: "am"
     pm: "pm"
