--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1069,7 +1069,7 @@ it:
   time:
     formats:
       default: "%a, %d %b %Y %H:%M:%S %z"
-      short: "%d %b %H:%M"
+      short: "%I:%M %p"
       long: "%B %d, %Y %H:%M"
     am: "am"
     pm: "pm"
